Issue #45: top menu remove on mobile

--- a/sites/all/themes/slac/sass/_layout.sass
+++ b/sites/all/themes/slac/sass/_layout.sass
@@ -3024,14 +3024,18 @@ h2
               background: #eaeef0
 
   .top-menu
+    min-height: 20px
     background: rgba(67, 121, 142, 0.4)
     ul.menu
       float: right
       li
+        list-style-type: none
+        list-style-image: none
         float: left
-        border-right: 1px solid #fff
-        &:first-child
-          border-left: 1px solid #fff
+        +at-breakpoint($tablet)
+          border-right: 1px solid white
+          &:first-child
+            border-left: 1px solid white
       a
         color: #fff
         padding: 0 30px
@@ -3045,7 +3049,10 @@ h2
           background-color: transparent
         &:hover
           text-decoration: underline
-
+        +at-breakpoint($tablet)
+          padding: 0 30px
+      +at-breakpoint($mobile-only)
+        display: none
   .pane-node-field-bp-image img
     border: 2px solid #e1e1e1
     padding: 0
